Forgot to push code

--- a/example.env
+++ b/example.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://user:password@localhost:5432/jukebox_pro
+DATABASE_URL=postgres://michael.gonzalez:Fredonia2016!@localhost:5432/jukebox_pro
